# RocaEditor

./: CMakeLists.txt  RocaEdit.pro  update-modules.sh
assets/: resources.qrc
src/: import_plugins.h  main_window.h  main_window_p.h  panel_header.h  side_panel.h  top_panel.h  top_panel_p.h
src/imp/: main.cpp  main_window.cpp  panel_header.cpp  side_panel.cpp  top_panel.cpp
src/tracks_panel/: tracks_bus.h  tracks_bus_p.h  tracks_item.h  tracks_item_p.h  tracks_panel.h  tracks_panel_p.h
src/tracks_panel/imp/: tracks_bus.cpp  tracks_item.cpp  tracks_panel.cpp
